changes to sample form

--- a/app/views/2_column/sample.html.erb
+++ b/app/views/2_column/sample.html.erb
@@ -4,17 +4,20 @@
 <%= widgets <<-YAML
 
   masthead: masthead/slider_1
-  
+
 
   primary_content:
+    - primary_content/wysiwyg_editor_3
+    - primary_content/collapsables_1
+    - primary_content/collapsables_2
+    - primary_content/collapsables_3
     - primary_content/funnel_1up_boxes_1
     - primary_content/funnel_2up_boxes_1
     - primary_content/personnel_region_1
     - primary_content/personnel_region_2
-    - primary_content/collapsables_1
-    - primary_content/collapsables_2
-    - primary_content/collapsables_3
+    - primary_content/form_1
     - primary_content/logo_image_rotator_1
+    - primary_content/featured_news_events_feed_1
 
   left_column:
     - left_column/callout_1
