--- a/app/views/widgets/primary_content/_form_1.html
+++ b/app/views/widgets/primary_content/_form_1.html
@@ -1,4 +1,7 @@
 <div class="form-widget">
+<h2>Optional Section Header Here</h2>
+<p>Optional copy above form here. Complete this form to stay informed about our programs, important deadlines, &amp; news. Please let us know if you have any questions.</p>
+
     <script language="JavaScript" type="text/javascript">
     <!--
     function validate() {
@@ -23,9 +26,9 @@
             <input name="sender" type="hidden" value="webmaster@chapman.edu">
             <input name="subject" type="hidden" value="Test of form">
             <input name="mail_format" type="hidden" value="html">
-            <input name="redirect_url" type="hidden" value="http://V_HTTP_HOST/index.aspx">
+            <input name="redirect_url" type="hidden" value="http://www.chapman.edu/index.aspx">
             
-            <h2>Student Information:</h2>
+            <h3>Student Information:</h3>
             <label for="student_name">Student NAme:</label>
             <input id="student_name" maxlength="50" name="student_name" size="30" type="text">
             <label for="email">* Email:</label>
