--- a/app/views/widgets/right_column/_simple_form.html
+++ b/app/views/widgets/right_column/_simple_form.html
@@ -1,6 +1,6 @@
 <div class="simple-form-widget callout">
-<h2> Request Information</h2>
-<div class="editableContent">Complete this form to stay informed about our programs, important deadlines, &amp; news. Please let us know if you have any questions.</div>
+<h2>Optional Section Header Here</h2>
+<div class="editableContent">Optional copy above form here. Complete this form to stay informed about our programs, important deadlines, &amp; news. Please let us know if you have any questions.</div>
                         
 <!--<script src="/_files/js/form_validation.js" type="text/javascript"></script>-->
 <script language="JavaScript" type="text/javascript">
