Update leftnav CSS to style the title class.

--- a/app/views/widgets/shared/_left_nav.html
+++ b/app/views/widgets/shared/_left_nav.html
@@ -1,14 +1,14 @@
-<ul>
-    
+<div class="leftTitle">
+    <ul>
                                 <li class="title t1">
                 <a href="../index.aspx" target="_top" title="Academics">
-                    Academics
+                    Academics Title Testing Long Title
                 </a>
             </li>
             
-
-    
-            
+    </ul>
+</div>
+<ul>            
     
                                          
         
