--- a/app/assets/stylesheets/components/left-nav-ul.scss
+++ b/app/assets/stylesheets/components/left-nav-ul.scss
@@ -2,13 +2,11 @@
 	> ul {
     float: left;
     width: 100%;
-    //background-color: $cu-off-white;
-	background-color: #d8d8d8;
+    background-color: #d8d8d8;
 	border-right: 1px solid #c1c1c1;
 	border-bottom: 1px solid #c1c1c1;
 	border-left: 1px solid #c1c1c1;
     position: relative;
-    //margin-bottom: $base-spacing;
     margin-bottom: 20px;
     li { 
       list-style-type: none;
@@ -108,5 +106,28 @@
       display: none;
       color: $cu-red;
     }
-  }
+  }  
 }
+
+.leftTitle {
+	> ul {
+    float: left;
+    width: 100%;
+    background-color: #2f2f2f;
+	border: 1px solid #2f2f2f;
+	position: relative;
+    margin-bottom: 0px;
+    li { 
+      list-style-type: none;
+      margin: 0;
+      a {	
+      	padding: 7px 40px 7px 20px;
+      	font-size:16px;
+      	color: $white;
+      	font-weight: 800;
+      		}
+    	}
+    }
+}
+
+
