--- a/app/views/widgets/hero/_side_panel.html
+++ b/app/views/widgets/hero/_side_panel.html
@@ -6,6 +6,7 @@
       <h2>Preparing students for a creative life in fiml and media arts.</h2>
       <p>
         Welcome to Dodge College of film and Media arts, a state-of-the-art facility open to you 24/7, acomplished faculty with a combined filmography of more than 300 feature films, a hands-on learning environment, international travel oportunities, one-of-a-kind internships, a solid alumni network and synergy across all programs.
+        Welcome to Dodge College of film and Media arts, a state-of-the-art facility open to you 24/7, acomplished faculty with a combined filmography of more than 300 feature films, a hands-on learning environment, international travel oportunities, one-of-a-kind internships, a solid alumni network and synergy across all programs.
       </p>
 
 
@@ -31,6 +32,7 @@
   <div class="cd-hero">
     <ul class="cd-hero-slider autoplay">
       <li class="selected">
+        <div class="theme-bg-color slider-bottom-border"></div>
         <div class="background-image" style="background-image: url('http://www.chapman.edu/dodge/_files/dmac/dmac-masthead.jpg'); ">
           <article class="theme-bg-color-alpha">
             <img src="http://www.chapman.edu/dodge/_files/dmac/dmac-masthead.jpg">
@@ -47,6 +49,7 @@
       </li>
       
       <li>
+        <div class="theme-bg-color slider-bottom-border"></div>
         <div class="background-video-wrapper">
           <article class="theme-bg-color-alpha">
             <video autoplay loop poster="http://www.chapman.edu/_files/img/hero-panels/fallback-images/football.jpg">
@@ -68,6 +71,7 @@
       </li>
   
       <li>
+        <div class="theme-bg-color slider-bottom-border"></div>
         <div class="background-image" style="background-image: url('http://www.chapman.edu/dodge/_files/dmac/dmac-masthead.jpg'); ">
           <article class="theme-bg-color-alpha">
             <img src="http://www.chapman.edu/dodge/_files/dmac/dmac-masthead.jpg">
