Added Communication theme.

--- a/app/assets/stylesheets/base/variables.scss
+++ b/app/assets/stylesheets/base/variables.scss
@@ -68,6 +68,9 @@ $asbe-secondary: #004f6b;
 $ces-primary: #008ec1;
 $ces-secondary: #007299;
 
+$communication-primary: #c88508;
+$communication-secondary: #b87800;
+
 $copa-primary: #69465c;
 $copa-secondary: #4f3445;
 
