--- a/app/assets/stylesheets/components/left-nav-ul.scss
+++ b/app/assets/stylesheets/components/left-nav-ul.scss
@@ -114,17 +114,27 @@
     float: left;
     width: 100%;
     background-color: #2f2f2f;
-	border: 1px solid #2f2f2f;
+	
 	position: relative;
     margin-bottom: 0px;
     li { 
       list-style-type: none;
       margin: 0;
+
       a {	
       	padding: 7px 40px 7px 20px;
       	font-size:16px;
       	color: $white;
       	font-weight: 800;
+      	border: 1px solid #2f2f2f;
+      	&:hover {
+	        	background-color: $white;
+	          	color: $cu-red;
+	          	border-top: 1px solid #c1c1c1;
+	          	border-left: 1px solid #c1c1c1;
+	          	border-right: 1px solid #c1c1c1;
+	          	border-bottom: 1px solid #f5f5f5;
+            	}
       		}
     	}
     }
