Updated Dodge colors to dark gray to match nav.

--- a/app/assets/stylesheets/base/variables.scss
+++ b/app/assets/stylesheets/base/variables.scss
@@ -80,7 +80,7 @@ $crean-secondary: #125e5a;
 $dance-primary: #007165;
 $dance-secondary: #005249;
 
-$dodge-primary: #000000;
+$dodge-primary: #2f2f2f;
 $dodge-secondary: #1f1f1f;
 $dodge-tertiary: #42413d;
 
