--- a/app/assets/stylesheets/widgets/hero/side_panel.scss
+++ b/app/assets/stylesheets/widgets/hero/side_panel.scss
@@ -28,6 +28,43 @@
     }
   }
 
+  .cd-arrow-container {
+    position: relative;
+    width: 100%;
+    height: 95%;
+    border: 2px solid red;
+
+    .cd-arrow-left, .cd-arrow-right {
+      height: 50px;
+      width: 50px;
+      position: absolute;
+      top: 50%;
+      background-color: white;
+
+      &:hover{
+        background-color: $black;
+      }
+    }
+
+    .cd-arrow-left { left: 0; }
+    .cd-arrow-right { right: 0; }
+    
+    @include media($medium-screen) {
+      .cd-arrow-left, .cd-arrow-right { display: none; }
+      &:hover{
+        .cd-arrow-left, .cd-arrow-right { display: block; }
+     }
+    }
+  }
+  
+  // super ugly css I know, but this was the only fix I could come up with to make the arrows appear properly
+  @include media($large-screen) {
+    .cd-arrow-left, .cd-arrow-right { display: none; }
+    &:hover{
+      .cd-arrow-left, .cd-arrow-right { display: block; }
+   }
+  }
+
   .cd-hero-slider {
     height: 95%;
     list-style-type: none;
