--- a/app/assets/stylesheets/base/mixins.scss
+++ b/app/assets/stylesheets/base/mixins.scss
@@ -79,15 +79,26 @@
 
 //Headings
 @mixin main_heading($weight: 800) {
-	margin-top: 12px;
 	font-family: "proxima-nova", "Helvetica Neue", "Microsoft Sans Serif", sans-serif;
-	font-size: 24px;
+	font-size: 22px;
+	line-height: 26px;
+	margin-top: 12px;
+	margin-bottom: 24px;
+
 	@if type-of($weight) == string {
 		font-weight: unquote($weight);
 	} @else {
 		font-weight: $weight;
 	}
-	line-height: 24px;
+
+	@include media($medium-screen) {
+		font-size: 28px;
+		line-height: 36px;
+	}
+
+	@include media($large-screen) {
+		font-size: 32px;
+	}
 }
 
 @mixin sub_heading($weight: 800) {
@@ -103,14 +114,24 @@
 
 @mixin section_heading($weight: 800) {
 	font-family: "proxima-nova", "Helvetica Neue", "Microsoft Sans Serif", sans-serif;
-	font-size: 24px;
+	font-size: 22px;
+	line-height: 26px;
+
 	@if type-of($weight) == string {
 		font-weight: unquote($weight);
 	} @else {
 		font-weight: $weight;
 	}
-	line-height: 32px;
-	letter-spacing: .8;
+
+	@include media($medium-screen) {
+		font-size: 16px;
+		line-height: 24px;
+	}
+
+	@include media($large-screen) {
+		font-size: 22px;
+		line-height: 32px;
+	}
 }
 
 @mixin sub_section_heading($weight: 800) {
@@ -139,8 +160,17 @@
 	margin-bottom: 0px;
 	font-family: "proxima-nova", "Helvetica Neue", "Microsoft Sans Serif", sans-serif;
 	font-size: 20px;
+	line-height: 26px;
 	font-weight: 300;
-	line-height: 20px;
+
+	@include media($medium-screen) {
+		font-size: 22px;
+		line-height: 22px;
+	}
+
+	@include media($large-screen) {
+		font-size: 24px;
+	}
 }
 
 //Paragraphs
