masthead arrows are clickable now

--- a/app/views/widgets/hero/_side_panel.html
+++ b/app/views/widgets/hero/_side_panel.html
@@ -1,5 +1,4 @@
 <div class="side-panel-hero">
-
   <div class="hero-content">
     <section class="hero-content-panel">
       <h1>Dodge College of Film and Media Arts</h1>
@@ -30,7 +29,11 @@
   </div>
 
   <div class="cd-hero">
-    <div class="cd-arrow-container">
+        <div class="cd-arrow-container">
+      <a class="cd-arrow-left" href="#"></a>
+      <a class="cd-arrow-right" href="#"></a>
+    </div>
+    <div class="cd-slide-container">
       <ul class="cd-hero-slider autoplay">
         <li class="selected">
           <div class="theme-bg-color slider-bottom-border"></div>
@@ -88,10 +91,7 @@
           </div>
         </li>
       </ul>
-      <a class="cd-arrow-left" href="#"></a>
-      <a class="cd-arrow-right" href="#"></a>
     </div>
-
     <div class="cd-slider-nav">
       <nav>
         <span class="cd-marker item-1"></span>
