--- a/app/assets/stylesheets/widgets/hero/side_panel.scss
+++ b/app/assets/stylesheets/widgets/hero/side_panel.scss
@@ -29,17 +29,19 @@
   }
 
   .cd-arrow-container {
-    position: relative;
+    position: absolute;
+    top: 50%;
     width: 100%;
-    height: 95%;
+    height: 50px;
     border: 2px solid red;
+    z-index: 668;
 
     .cd-arrow-left, .cd-arrow-right {
-      height: 50px;
+      height: 100%;
       width: 50px;
       position: absolute;
-      top: 50%;
       background-color: white;
+      pointer-events:all;
 
       &:hover{
         background-color: $black;
@@ -57,6 +59,11 @@
     }
   }
   
+
+  .cd-slide-container {
+    height: 95%;
+    width: 100%;
+  }
   // super ugly css I know, but this was the only fix I could come up with to make the arrows appear properly
   @include media($large-screen) {
     .cd-arrow-left, .cd-arrow-right { display: none; }
@@ -276,7 +283,7 @@
         width: 100%;
         background-color: #FFF;
         top: 0px;
-        z-index: 668;
+        z-index: 667;
 
         li {
           max-width: 100%;
