--- a/app/views/widgets/hero/_side_panel.html
+++ b/app/views/widgets/hero/_side_panel.html
@@ -29,10 +29,8 @@
   </div>
 
   <div class="cd-hero">
-        <div class="cd-arrow-container">
-      <a class="cd-arrow-left" href="#"></a>
-      <a class="cd-arrow-right" href="#"></a>
-    </div>
+    <div class="cd-arrow-left"><a href="#">&lsaquo;</a></div>
+    <div class="cd-arrow-right"><a href="#">&rsaquo;</a></div>
     <div class="cd-slide-container">
       <ul class="cd-hero-slider autoplay">
         <li class="selected">
