--- a/app/assets/stylesheets/widgets/hero/side_panel.scss
+++ b/app/assets/stylesheets/widgets/hero/side_panel.scss
@@ -3,7 +3,7 @@
   background-color: #eaeaea;
 
   + div { // Whatever is under this hero area should have double padding to account for the overlap
-    padding-top: $one-column-widget-spacing*2;
+    padding-top: $one-column-widget-spacing;
   }
 
   video {
@@ -43,7 +43,7 @@
     bottom: 0;
     height: 50px;
     width: 50px;
-    text-align:center;
+    text-align: center;
     margin: auto;
     z-index: 668;
     pointer-events:all;
@@ -173,7 +173,7 @@
     padding: $one-column-widget-spacing/2 $primary-column-widget-spacing;
 
     @include media($medium-screen) {
-      padding: $one-column-widget-spacing/2 $base-spacing*3;
+      padding: $one-column-widget-spacing $base-spacing*3 $base-spacing $base-spacing*3;
     }
     @include media($large-screen) {
       padding: $primary-column-widget-spacing*2 0;
@@ -187,30 +187,56 @@
     
     @include media($large-screen) {
       @include span-columns(6);
-      padding: $one-column-widget-spacing $one-column-widget-spacing/2;
+      padding: $base-spacing*3 $one-column-widget-spacing/2 $one-column-widget-spacing $one-column-widget-spacing/2;
       box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.2);
       background-color: white;
       pointer-events: all;
     }
 
     // Title
-    h1 { 
-      margin-top: 0; 
-      text-align: center;
+    h1 {
+      margin: 0;
+      font-size: 22px;
+      line-height: 30px;
+
+      @include media($medium-screen) {
+        font-size: 28px;
+        line-height: 36px;
+      }
+
+      @include media($large-screen) {
+        font-size: 32px;
+        line-height: 40px;
+      }
     }
 
     // Subtitle
-    h2 { 
+    h2 {
       font-weight: 200;
-      text-align: center;
+      margin: $base-spacing/2 0;
+      font-size: 20px;
+      line-height: 30px;
+
+      @include media($medium-screen) {
+        font-size: 22px;
+        line-height: 32px;
+      }
+
+      @include media($large-screen) {
+        font-size: 24px;
+        line-height: 34px;
+      }
     }
 
-    p {
+    p { line-height: 24px; }
+
+    h1, h2, p {
       text-align: center;
+      @include media($large-screen) { text-align: left; }
     }
     
     .calls-to-action { 
-      margin-top: $base-spacing*3;
+      margin-top: $base-spacing;
       text-align: center;
 
       a {
@@ -223,18 +249,17 @@
 
         @include media($medium-screen) {
           width: 45%;
-          margin: 8px;
+          margin: $base-spacing/2;
         }
 
         @include media($large-screen) {
           width: 100%;
-          margin: 8px 0px;
+          margin: $base-spacing/4 0px;
         }
       }
     }
 
     .program-select {
-      margin-top: $base-spacing/2;
       position: relative;
 
       @include media($medium-screen) {
@@ -246,7 +271,7 @@
       @include media($large-screen) {
         width: 100%;
         margin: 0;
-        margin-top: $base-spacing/2;
+        margin-top: $base-spacing/4;
       }
 
       .select-arrow {
