--- a/app/views/widgets/single_column/_cta_footer.html
+++ b/app/views/widgets/single_column/_cta_footer.html
@@ -1,18 +1,18 @@
-<div class="cta-footer-widget cta-footer-widget__medium-bg">
+<div class="cta-footer-widget">
 	<div class="outer-container">
 		<div class="text-section">
-			<p>Take the Next Step</p>
+			<p class="theme-text-color">Take the Next Step</p>
 		</div>
 		<div class="button-section">
 			<div class="button-container">
 				<div class="button-wrapper">
-					<a class="footer-button gray" href="../../admission/undergraduate/applynow.aspx">Visit our Campus</a>
+					<a class="footer-button theme-button" href="../../admission/undergraduate/applynow.aspx">Visit our Campus</a>
 				</div>
 				<div class="button-wrapper">
 					<a class="footer-button theme-button" href="../../admission/undergraduate/applynow.aspx">Alumni Success</a>
 				</div>
 				<div class="button-wrapper">
-					<a class="footer-button red" href="../../admission/undergraduate/applynow.aspx">Apply Now</a>
+					<a class="footer-button theme-button" href="../../admission/undergraduate/applynow.aspx">Apply Now</a>
 				</div>
 			</div>
 		</div>
