--- a/app/assets/stylesheets/widgets/single_column/cta_footer.scss
+++ b/app/assets/stylesheets/widgets/single_column/cta_footer.scss
@@ -24,6 +24,7 @@ $white: #ffffff;
 			margin-bottom: 0;
 			text-align: center;
 			font-size: 20px;
+			font-weight: 600;
 			line-height: 20px;
 			text-transform: uppercase;
 		}
