--- a/app/assets/stylesheets/widgets/hero/side_panel.scss
+++ b/app/assets/stylesheets/widgets/hero/side_panel.scss
@@ -122,19 +122,18 @@
       border-radius: 15px;
       text-indent: -9999px;
       margin-right: 12px;
-      box-shadow: 0 0 2px $black;
+      border: 2px solid #676767;
       padding-top: 0;
-      &:hover { background-color: transparent; }
+      &:hover { background-color: #676767; }
     }
 
     li {
       width: inherit;
       &.selected a {
-        background: $black;
-        color: $black;
+        background: #676767;
         opacity: 1;
         box-shadow: 0 0 2px #F0EFE7;
-        &:hover { background-color: $black }
+        &:hover { background-color: #676767; }
       }
     }
 
