--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1,5 +1,11 @@
 <h1>Sample Cascade Pages</h1>
 
+<h2>Home Page Sample Pages</h2>
+<ul>
+<% @home_page_pages.each do |page| %>
+  <li><%= link_to page.titleize, "/home_page/#{page}" %></li>
+<% end %>
+</ul>
 
 <h2>One Column Sample Pages</h2>
 <ul>
