--- a/app/views/widgets/single_column/_messaging_2_column.html
+++ b/app/views/widgets/single_column/_messaging_2_column.html
@@ -1,7 +1,7 @@
 <div class="messaging-widget messaging-widget__2-column messaging-widget__text-left messaging-widget__dark-bg" style="background-image: url('http://7-themes.com/data_images/out/45/6924102-funny-kitten-pictures.jpg');">
 	<div class="outer-container">
 		<div class="media-column">
-			<span class="center-media-helper"></span><img class="media" src="http://7-themes.com/data_images/out/45/6924102-funny-kitten-pictures.jpg"/>
+			<span class="center-media-helper"></span><img class="media" src="http://www.critterbabies.com/wp-content/gallery/kittens/Cute-Kitten-kittens-16122946-1280-800.jpg"/>
 		</div>
 		<div class="text-column">
 			<div class="section-message">
