added sample yaml view for ad landing page template

--- a/app/views/ad_landing_page/sample.html.erb
+++ b/app/views/ad_landing_page/sample.html.erb
@@ -2,5 +2,22 @@
 <%= theme "business" %>
 
 <%= widgets <<-YAML
+  
+  masthead:
+    - ad_landing_page/header
+    - ad_landing_page/hero
+
+  left_column:
+    - ad_landing_page/messaging_with_video
+    - ad_landing_page/messaging_with_image
+
+  right_column:
+    - ad_landing_page/feature_points
+    - ad_landing_page/excerpt
+    - ad_landing_page/messaging_only
+
+  footer:
+    - ad_landing_page/sponsor_bar
+
  YAML
 %>
