fixed cta-buttons to be more consistent with design

--- a/app/views/widgets/single_column/_cta_footer.html
+++ b/app/views/widgets/single_column/_cta_footer.html
@@ -4,16 +4,14 @@
 			<p class="theme-text-color">Take the Next Step</p>
 		</div>
 		<div class="button-section">
-			<div class="button-container">
-				<div class="button-wrapper">
-					<a class="footer-button theme-button" href="../../admission/undergraduate/applynow.aspx">Visit our Campus</a>
-				</div>
-				<div class="button-wrapper">
-					<a class="footer-button theme-button" href="../../admission/undergraduate/applynow.aspx">Alumni Success</a>
-				</div>
-				<div class="button-wrapper">
-					<a class="footer-button theme-button" href="../../admission/undergraduate/applynow.aspx">Apply Now</a>
-				</div>
+			<div class="button-wrapper">
+				<a class="footer-button theme-button" href="../../admission/undergraduate/applynow.aspx">View Undergraduate Programs</a>
+			</div>
+			<div class="button-wrapper">
+				<a class="footer-button theme-button" href="../../admission/undergraduate/applynow.aspx">View Graduate Programs</a>
+			</div>
+			<div class="button-wrapper">
+				<a class="footer-button theme-button" href="../../admission/undergraduate/applynow.aspx">About Chapman</a>
 			</div>
 		</div>
 	</div>
