--- a/app/assets/stylesheets/widgets/single_column/cta_footer.scss
+++ b/app/assets/stylesheets/widgets/single_column/cta_footer.scss
@@ -1,63 +1,50 @@
 $white: #ffffff;
+
 .cta-footer-widget {
-	padding: 24px 0;
+	padding: 48px 0;
 	background: white;
+
+	@include media($medium-screen) {
+		padding: 64px 0;
+	}
 
 	.outer-container {
 		@include outer-container();
-		@include pad($base-spacing*2);
+		@include pad(0 $base-spacing*2);
 		width: 100%;
 
 		@include media($medium-screen) {
-			@include pad( $base-spacing $base-spacing*2);
-		}
-
-		@include media($large-screen) {
-			@include pad($base-spacing);
+			@include pad( $base-spacing 0);
 		}
 	}
 
 	.text-section {
-		margin-bottom: 16px;
+		margin-bottom: 24px;
+
+		@include media($medium-screen) {
+			margin-bottom: 32px;
+		}
 
 		p {
 			margin-bottom: 0;
 			text-align: center;
-			font-size: 20px;
+			font-size: 24px;
 			font-weight: 600;
 			line-height: 20px;
 			text-transform: uppercase;
 		}
-
-		@include media($medium-screen) {
-			margin-bottom: 10px;
-		}
 	}
 
 	.button-section {
-		.button-container {
-			width: 100%;
-			text-align: center;
-		}
+		text-align: center;
 
 		.button-wrapper {
-			margin-top:8px;
-		}
+			display: block;
+			margin-bottom: 8px;
 
-		.footer-button {
-			text-align: center;
-			width: 100%;
-
-		}
-
-		@include media($medium-screen) {
-			.button-container {
-				display: table;
-			}
-
-			.button-wrapper {
-				display: table-cell;
-				padding: 1%;
+			@include media($medium-screen) {
+				display: inline-block;
+				margin: 0 12px;
 			}
 		}
 	}
