updated school themes with new class for background overlay color

--- a/app/assets/stylesheets/themes/business.scss
+++ b/app/assets/stylesheets/themes/business.scss
@@ -2,9 +2,8 @@
 #theme.business {
   @include theme-color-classes($asbe-primary);
 
-  .smallMasthead .masthead, .smallMasthead .masthead-old, .bigMasthead .mastheadPlaceholder, .bigMasthead .masthead, .bigMasthead .masthead-old, .nameBar, .rightColumn .styleTwo {
+  .smallMasthead .masthead, .smallMasthead .masthead-old, .bigMasthead .mastheadPlaceholder, .bigMasthead .masthead, .bigMasthead .masthead-old, .nameBar, .rightColumn .styleTwo, .background-image-overlay {
     background: $asbe-primary; /* Old browsers */
-    
   }
 
   .nameBarButtons li a {
