updated ad landing page layout

--- a/app/views/layouts/ad_landing_page.html.erb
+++ b/app/views/layouts/ad_landing_page.html.erb
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
+<script async="async" src="https://go.chapman.edu/ping">/**/</script>
 <%= render 'widgets/shared/head' %>
 
 <!--[if lt IE 7]> <body class="ie6 oldie phaseFour"> <![endif]-->
@@ -17,7 +18,7 @@
       <p>Some of the content on this website requires JavaScript to be enabled in your web browser to function as intended. This includes, but is not limited to: Flash (also requires the <a href="https://www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash" target="_blank" title="Get Adobe Flash Player (link opens in a new browser window)">Adobe Flash Player</a>), navigation, video, image galleries, etc. While the website is still usable without JavaScript, it should be enabled to enjoy the full interactive experience.</p>
     </div>
 
-    <div id="container">
+    <div id="ad-landing-container container">
       <%= yield(:masthead) %>
       <div id="left-column">
         <h2><%= yield(:title) %></h2>
