sample html for ad landing page masthead

--- a/app/assets/stylesheets/widgets/_ad_landing_page/masthead.scss
+++ b/app/assets/stylesheets/widgets/_ad_landing_page/masthead.scss
@@ -10,6 +10,11 @@
     width: 100%;
   }
 
+  .masthead-header {
+    border: 1px solid $red;
+    width: 100%;
+    height: 100px;
+    background: #000;
   }
 
   .masthead-hero, .background-image, .background-video-wrapper {
