--- a/app/views/ad_landing_page/sample.html.erb
+++ b/app/views/ad_landing_page/sample.html.erb
@@ -5,7 +5,7 @@
   
   masthead:
     - ad_landing_page/header
-    - ad_landing_page/hero
+    - ad_landing_page/masthead
 
   left_column:
     - ad_landing_page/messaging_with_video
