--- a/app/assets/stylesheets/themes/copa.scss
+++ b/app/assets/stylesheets/themes/copa.scss
@@ -1,7 +1,7 @@
 
 #theme.copa {
   @include theme-color-classes($copa-primary);
-  .smallMasthead .masthead, .smallMasthead .masthead-old, .bigMasthead .mastheadPlaceholder, .bigMasthead .masthead, .bigMasthead .masthead-old, .nameBar, .rightColumn .styleTwo, .background-image-overlay  {
+  .smallMasthead .masthead, .smallMasthead .masthead-old, .bigMasthead .mastheadPlaceholder, .bigMasthead .masthead, .bigMasthead .masthead-old, .nameBar, .rightColumn .styleTwo, .outer-background-overlay, .inner-background-overlay {
   	background: $copa-primary; /* Old browsers */
 
   }
