--- a/app/assets/stylesheets/themes/copa__dance.scss
+++ b/app/assets/stylesheets/themes/copa__dance.scss
@@ -1,7 +1,7 @@
 
 #theme.copa__dance {
   @include theme-color-classes($dance-primary);
-  .smallMasthead .masthead, .smallMasthead .masthead-old, .bigMasthead .mastheadPlaceholder, .bigMasthead .masthead, .bigMasthead .masthead-old, .nameBar, .rightColumn .styleTwo, .background-image-overlay {
+  .smallMasthead .masthead, .smallMasthead .masthead-old, .bigMasthead .mastheadPlaceholder, .bigMasthead .masthead, .bigMasthead .masthead-old, .nameBar, .rightColumn .styleTwo, .outer-background-overlay, .inner-background-overlay {
   	background: $dance-primary; /* Old browsers */
   	
   }
