--- a/app/assets/stylesheets/widgets/_ad_landing_page/masthead.scss
+++ b/app/assets/stylesheets/widgets/_ad_landing_page/masthead.scss
@@ -11,10 +11,49 @@
   }
 
   .masthead-header {
-    border: 1px solid $red;
     width: 100%;
-    height: 100px;
-    background: #000;
+    background: white;
+    padding: $base-spacing*2 $base-spacing*3;
+
+    @include media($medium-screen) {
+      padding: 0;
+    }
+
+    .header-mobile {
+      @include media($medium-screen) {
+        display: none;
+      }
+    }
+
+    .header-desktop {
+      display: none;
+
+      @include media($medium-screen) {
+        display: table;
+        width: 100%;
+        position: relative;
+        z-index: 667;
+        background-color: white;
+        padding: 24px;
+      }
+    }
+    
+    .header-logo-desktop {
+      width: 50%;
+      display: table-cell;
+    }
+
+    .header-text-desktop {
+      display: none;
+
+      @include media($large-screen) {
+        display: table-cell;
+        text-align: right;
+        font-size: 16px;
+        vertical-align: middle;
+        margin: 0;
+      }
+    }
   }
 
   .masthead-hero, .background-image, .background-video-wrapper {
@@ -22,7 +61,7 @@
     pointer-events: none;
     background-color: #eaeaea;
 
-    @include media($large-screen) {
+    @include media($medium-screen) {
       overflow: hidden;
       display: block;
       position: absolute;
@@ -31,27 +70,33 @@
     }
   }
 
-  .masthead-hero {
-    @include media($medium-screen) {
-      .cd-arrow-left, .cd-arrow-right { display: none; }
-      &:hover{
-        .cd-arrow-left, .cd-arrow-right { display: block; }
-     }
-    }
-  }
-
   .background-image {
     background-size: 0 0;
-    @include media($large-screen) {
+    @include media($medium-screen) {
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center bottom;
+    }
+
+    .outer-background-overlay {
+      display: none;
+
+      @include media($medium-screen) {
+        display: block;
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        width: 100%;
+        height: 100%;
+        background: #000;
+        opacity: 0.6;
+      }
     }
   }
 
   .background-video-wrapper #background-video {
     display: none;
-    @include media($large-screen) {
+    @include media($medium-screen) {
       display: inline-block;
     }
   }
@@ -60,11 +105,11 @@
     @include outer-container;
     position: relative;
     padding: $one-column-widget-spacing/2 $primary-column-widget-spacing;
+    background-color: white;
 
     @include media($medium-screen) {
+      background-color: transparent;
       padding: $one-column-widget-spacing $base-spacing*3 $base-spacing $base-spacing*3;
-    }
-    @include media($large-screen) {
       padding: 0;
       pointer-events: none;
       z-index: 666;
@@ -75,7 +120,7 @@
   .masthead-content-panel {
     background-color: white;
     
-    @include media($large-screen) {
+    @include media($medium-screen) {
       @include span-columns(6);
       float: right;
       padding: $base-spacing*3 $one-column-widget-spacing/2 $one-column-widget-spacing $one-column-widget-spacing/2;
@@ -121,7 +166,7 @@
 
     h1, h2, p {
       text-align: center;
-      @include media($large-screen) { text-align: left; }
+      @include media($medium-screen) { text-align: left; }
     }
     
     .calls-to-action { 
@@ -137,11 +182,6 @@
         border-radius: 0px;
 
         @include media($medium-screen) {
-          width: 45%;
-          margin: $base-spacing/2;
-        }
-
-        @include media($large-screen) {
           width: 100%;
           margin: $base-spacing/4 0px;
         }
@@ -159,20 +199,10 @@
     z-index: 667;
 
     @include media($medium-screen) {
-      color: $black;
-      position: absolute;
-      padding: 0;
-      margin-top: $base-spacing*3;
-      background-image: none;
-    }
-
-    @include media($large-screen) {
-      @include span-columns(10);
-      @include shift(1);
-      padding: $base-spacing*2 $base-spacing*3;
-      margin-bottom: $base-spacing*2;
+      @include span-columns(8);
+      padding: $base-spacing*2 $base-spacing;
+      margin-bottom: $base-spacing*3;
       bottom: 0;
-      border-radius: 3px;
       position: absolute;
       color: white;
       background: none !important;
@@ -182,10 +212,10 @@
       width: 100%;
       height: auto;
       margin-bottom: -6px;
-      @include media($large-screen) { display: none; }
+      @include media($medium-screen) { display: none; }
     }
 
-    .background-image-overlay {
+    .inner-background-overlay {
       position: absolute;
       top: 0px;
       left: 0px;
@@ -194,7 +224,7 @@
       background: #000;
       opacity: 0.6;
 
-      @include media($large-screen) {
+      @include media($medium-screen) {
         display: none;
       }
     }
@@ -205,18 +235,31 @@
       @include content_label();
       color: $black;
 
-      @include media($large-screen) {
+      @include media($medium-screen) {
         color: white;
       }
     }
     
-    .title {
+    .title { 
       margin: 0;
+
+      @include media($large-screen) {
+        font-size: 36px;
+      }
     }
     
     .subtitle { 
-      margin-top: 0;
-      font-weight: 200;
+      margin-top: $base-spacing;
+      font-weight: 400;
+
+      @include media($medium-screen) {
+        @include span-columns(12);
+      }
+
+      @include media($large-screen) {
+        margin-top: 0;
+        font-size: 24px;
+      }
     }
 
     a {
@@ -224,9 +267,28 @@
       text-decoration: underline;
       font-weight: bold;
 
-      @include media($large-screen) {
+      @include media($medium-screen) {
         color: white;
       }
     }
-  } 
+  }
+
+  .masthead-footer {
+    display: none;
+
+    @include media($medium-screen) {
+      display: block;
+      position: relative;
+      text-align: center;
+      background-color: #2f2f2f;
+      padding: 1px 0;
+    }
+
+    .footer-text-desktop {
+      line-height: 0.7em;
+      font-size: 101px;
+      margin: 0 -5%;
+      white-space: nowrap;
+    }
+  }
 }
