updated sample html for ad landing page masthead with header and footer

--- a/app/views/widgets/ad_landing_page/_masthead.html
+++ b/app/views/widgets/ad_landing_page/_masthead.html
@@ -1,17 +1,20 @@
 <div class="ad-landing-masthead">
-<!--   <div class="masthead-header">
-    
-  </div> -->
+  <div class="masthead-header">
+    <%= image_tag("argyros-center-stacked.svg", class: "header-mobile") %>
+    <div class="header-desktop">
+      <%= image_tag("argyros-horizontal-stacked.svg", class: "header-logo-desktop") %>
+      <p class="header-text-desktop">MAKING <strong>BOLD</strong> STEPS</p>
+    </div>
+  </div>
 
   <div class="masthead-hero">
     <div class="background-image" style="background-image: url('http://www.chapman.edu/dodge/_files/dmac/dmac-masthead.jpg'); ">
+      <div class="outer-background-overlay"></div>
       <article style="background-image: url('http://www.chapman.edu/dodge/_files/dmac/dmac-masthead.jpg'); ">
-        <div class="background-image-overlay"></div>
+        <div class="inner-background-overlay"></div>
         <div class="content">
           <h1 class="title">TURN YOUR PASSION, KNOWLEDGE AND EXPERIENCE INTO A REWARDING CAREER</h1>
-          <h2 class="subtitle">Innovative Business Practices.</h2>
-          <h2 class="subtitle">Big Data Analytics.</h2>
-          <h2 class="subtitle">Student-Centered Learning.</h2>
+          <h2 class="subtitle">Earn your Masters Degree at Dodge College of Film and Media Arts.</h2>
         </div>
       </article>
     </div>
@@ -23,7 +26,6 @@
       <h2>Preparing students for a creative life in fiml and media arts.</h2>
       <p>
         Welcome to Dodge College of film and Media arts, a state-of-the-art facility open to you 24/7, acomplished faculty with a combined filmography of more than 300 feature films, a hands-on learning environment, international travel oportunities, one-of-a-kind internships, a solid alumni network and synergy across all programs.
-        Welcome to Dodge College of film and Media arts, a state-of-the-art facility open to you 24/7, acomplished faculty with a combined filmography of more than 300 feature films, a hands-on learning environment, international travel oportunities, one-of-a-kind internships, a solid alumni network and synergy across all programs.
       </p>
 
       <nav class="calls-to-action">
@@ -32,5 +34,9 @@
       </nav>
       <div id="form_211afdcd-26ad-4084-8b41-349d8d55f09a">Loading...</div><script>/*<![CDATA[*/var script = document.createElement('script'); script.src = 'https://myuniversity.edu/register/?id=211afdcd-26ad-4084-8b41-349d8d55f09a&output=embed&div=form_211afdcd-26ad-4084-8b41-349d8d55f09a&form_sys:program=Chemistry' + ((location.search.length > 1) ? '&' + location.search.substring(1) : ''); var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(script, s);/*]]>*/</script>
     </section>
+  </div>
+
+  <div class="masthead-footer">
+    <h2 class="footer-text-desktop">CHAPMAN UNIVERSITY</h2>
   </div>
 </div>
