created sponsor slideshow

--- a/app/views/widgets/ad_landing_page/_sponsor_bar.html
+++ b/app/views/widgets/ad_landing_page/_sponsor_bar.html
@@ -1,3 +1,18 @@
-<div>
-
+<div id="sponsor-bar">
+	<div class="outer-container">
+		<div class="carousel-container">
+			<div class="jcarousel">
+				<ul class="sponsor-list">
+					<li class="sponsor-list-item"><img src="<%= image_path 'ad_landing_page/Wells.png' %>"/></li>
+					<li class="sponsor-list-item"><img src="<%= image_path 'ad_landing_page/Deloitte.png' %>"/></li>
+					<li class="sponsor-list-item"><img src="<%= image_path 'ad_landing_page/Johnson.png' %>"/></li>
+					<li class="sponsor-list-item"><img src="<%= image_path 'ad_landing_page/Dell.png' %>"/></li>
+					<li class="sponsor-list-item"><img src="<%= image_path 'ad_landing_page/Mattel.png' %>"/></li>
+					<li class="sponsor-list-item"><img src="<%= image_path 'ad_landing_page/Ernst.png' %>"/></li>
+					<li class="sponsor-list-item"><img src="<%= image_path 'ad_landing_page/Disney.png' %>"/></li>
+					<li class="sponsor-list-item"><img src="<%= image_path 'ad_landing_page/CBRE.png' %>"/></li>
+				</ul>
+			</div>
+		</div>
+	</div>
 </div>
