classes for primary content columns

--- a/app/views/layouts/ad_landing_page.html.erb
+++ b/app/views/layouts/ad_landing_page.html.erb
@@ -20,11 +20,11 @@
 
     <div id="ad-landing-container container">
       <%= yield(:masthead) %>
-      <div id="left-column">
+      <div id="left-column" class="ad-landing-left-column">
         <h2><%= yield(:title) %></h2>
         <%= yield(:left_column) %>
       </div>
-      <div id="right-column">
+      <div id="right-column" class="ad-landing-left-column">
         <%= yield(:right_column) %>
       </div>
       <%= yield(:footer) %>
