--- a/app/views/layouts/ad_landing_page.html.erb
+++ b/app/views/layouts/ad_landing_page.html.erb
@@ -22,7 +22,7 @@
       <%= yield(:masthead) %>
       <div id="column-container" class="ad-landing-column-container">
         <div id="left-column" class="ad-landing-left-column">
-          <h2><%= yield(:title) %></h2>
+          <h2 class="ad-landing-title"><%= yield(:title) %></h2>
           <%= yield(:left_column) %>
         </div>
         <div id="right-column" class="ad-landing-left-column">
