--- a/app/assets/stylesheets/widgets/_ad_landing_page/masthead.scss
+++ b/app/assets/stylesheets/widgets/_ad_landing_page/masthead.scss
@@ -2,8 +2,11 @@
   position: relative;
   background-color: #eaeaea;
 
-  + div { // Whatever is under this hero area should have double padding to account for the overlap
-    padding-top: $one-column-widget-spacing;
+  + div {
+    padding-top: 0;
+    @include media($medium-screen) {
+      padding-top: $one-column-widget-spacing;
+    }
   }
 
   video {
